btc data cleaning added

--- a/test.ipynb
+++ b/test.ipynb
@@ -7350,66 +7350,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_weekly_folds(data, time_freq, n_fold, data_dir):\n",
+    "\n",
+    "    week_df = data.copy()\n",
+    "    week_df['week'] = week_df['datetime'].dt.isocalendar()['week']\n",
+    "\n",
+    "    week_list = list(week_df['week'].unique())\n",
+    "\n",
+    "    folder_name = f'btc_fold{n_fold}_{time_freq}min_week'\n",
+    "\n",
+    "    if not os.path.exists(os.path.join(data_dir, folder_name)):\n",
+    "        os.mkdir(os.path.join(data_dir, folder_name))\n",
+    "\n",
+    "    for i in tqdm(week_list):\n",
+    "        \n",
+    "        temp_df = week_df[week_df['week']==i]\n",
+    "        temp_df.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "        temp_df.to_csv(f\"{folder_name}/data_fold{i}.csv\", index=False)\n",
+    "        # print(temp_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_monthly_folds(data, time_freq, n_fold, data_dir):\n",
+    "\n",
+    "    month_df = data.copy()\n",
+    "\n",
+    "    folder_name = f'btc_fold{n_fold}_{time_freq}min_month'\n",
+    "\n",
+    "    if not os.path.exists(os.path.join(data_dir, folder_name)):\n",
+    "        os.mkdir(os.path.join(data_dir, folder_name))\n",
+    "\n",
+    "    for i in tqdm(range(1, 13)):\n",
+    "\n",
+    "        temp_df = month_df[month_df['datetime'].dt.month == i]\n",
+    "        temp_df.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "        temp_df.to_csv(f\"{folder_name}/data_fold{i}.csv\", index=False)\n",
+    "        # print(temp_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/3 [00:00<?, ?it/s]"
+      "  0%|          | 0/4 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2012 2020 2021\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 33%|███▎      | 1/3 [00:00<00:00,  3.08it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(78888, 6)\n",
-      "(8760, 6)\n",
-      "2013 2021 2022\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|██████▋   | 2/3 [00:00<00:00,  3.13it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(78888, 6)\n",
-      "(8760, 6)\n",
-      "2014 2022 2023\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [00:00<00:00,  3.17it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2012 2020 2021\n",
       "(78888, 6)\n",
       "(8760, 6)\n"
      ]
@@ -7418,7 +7424,63 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "100%|██████████| 53/53 [00:00<00:00, 228.19it/s]\n",
+      "100%|██████████| 12/12 [00:00<00:00, 136.25it/s]\n",
+      " 25%|██▌       | 1/4 [00:00<00:02,  1.13it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2013 2021 2022\n",
+      "(78888, 6)\n",
+      "(8760, 6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 52/52 [00:00<00:00, 259.66it/s]\n",
+      "100%|██████████| 12/12 [00:00<00:00, 124.85it/s]\n",
+      " 50%|█████     | 2/4 [00:01<00:01,  1.08it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2014 2022 2023\n",
+      "(78888, 6)\n",
+      "(8760, 6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 52/52 [00:00<00:00, 210.20it/s]\n",
+      "100%|██████████| 12/12 [00:00<00:00, 136.09it/s]\n",
+      " 75%|███████▌  | 3/4 [00:02<00:00,  1.08it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2015 2023 2024\n",
+      "(78888, 6)\n",
+      "(8784, 6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 52/52 [00:00<00:00, 231.32it/s]\n",
+      "100%|██████████| 12/12 [00:00<00:00, 149.93it/s]\n",
+      "100%|██████████| 4/4 [00:03<00:00,  1.09it/s]\n"
      ]
     }
    ],
@@ -7427,7 +7489,7 @@
     "\n",
     "time_freq = 60\n",
     "fold_size = 9 # years\n",
-    "n_folds = 3\n",
+    "n_folds = 4\n",
     "\n",
     "df_freq = change_frequency(data=df, freq=f'{time_freq}min', instrument_name='btc')\n",
     "\n",
@@ -7453,56 +7515,17 @@
     "    temp_df_valid.reset_index(drop=True, inplace=True)\n",
     "\n",
     "    temp_df_valid.to_csv(f\"{folder_name}/data_fold{n_folds+i+1}.csv\", index=False)\n",
-    "    print(temp_df_valid.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from pathlib import Path\n",
-    "import os\n",
-    "from tqdm import tqdm\n",
+    "    print(temp_df_valid.shape)\n",
     "\n",
-    "cur_dir = os.getcwd()\n",
+    "    get_weekly_folds(data=temp_df_valid, time_freq=time_freq, n_fold=i+1, data_dir=data_dir)\n",
     "\n",
-    "data_dir = Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2')\n",
+    "    get_monthly_folds(data=temp_df_valid, time_freq=time_freq, n_fold=i+1, data_dir=data_dir)\n",
     "\n",
-    "os.chdir(data_dir)\n",
+    "# temp_df_valid = df_freq[df_freq['datetime'].dt.year>=2024]\n",
+    "# temp_df_valid.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "data_path = Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\data_240min.csv')\n",
-    "df = pd.read_csv(data_path)\n",
-    "\n",
-    "time_freq = 240\n",
-    "\n",
-    "# fold_size = int(7 * 24 * 60 * 5 / time_freq)\n",
-    "fold_size = int(7 * 24 * 60 * 40 / time_freq)\n",
-    "# fold_size = int(7 * 24 * 60 * 10 / time_freq)\n",
-    "\n",
-    "n_folds = int((df.shape[0] - (df.shape[0]  % fold_size)) / fold_size)\n",
-    "\n",
-    "# folder_name = f'data_folds_{time_freq}min'\n",
-    "folder_name = f'data_folds2_{time_freq}min'\n",
-    "\n",
-    "if not os.path.exists(folder_name):\n",
-    "    os.mkdir(folder_name)\n",
-    "\n",
-    "for i in tqdm(range(n_folds)):\n",
-    "\n",
-    "    temp_df = df.iloc[i*fold_size:(i+1)*fold_size]\n",
-    "    temp_df.reset_index(drop=True, inplace=True)\n",
-    "\n",
-    "    temp_df.to_csv(f\"{folder_name}/data_fold{i+1}.csv\", index=False)\n",
-    "    print(temp_df.shape)\n",
-    "\n",
-    "test_df = df.iloc[n_folds*fold_size:]\n",
-    "test_df.reset_index(drop=True, inplace=True)\n",
-    "test_df.to_csv(f\"{folder_name}/test_data.csv\", index=False)\n",
-    "\n",
-    "os.chdir(cur_dir)"
+    "# temp_df_valid.to_csv(f\"{folder_name}/data_fold{n_folds+i+2}.csv\", index=False)\n",
+    "# print(temp_df_valid.shape)"
    ]
   },
   {
