--- a/test.ipynb
+++ b/test.ipynb
@@ -7599,7 +7599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8237,6 +8237,7 @@
     "\n",
     "        logger.info('Saving survived strategies to %s directory...', str_path)\n",
     "        df_selected_str = df_str[df_str['strategy'].isin(mc_strategies)]\n",
+    "        df_selected_str['prob'] = final_mc_df[final_mc_df['strategy'].isin(mc_strategies)]['prob'].values.tolist()\n",
     "        selected_path = f'{str_path}/selected_strategies_{str_file_name}.csv'\n",
     "        df_selected_str.to_csv(selected_path, index=False)\n",
     "        logger.info('Saving survived strategies to %s directory completed!', str_path)\n",
@@ -8659,7 +8660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8708,7 +8709,7 @@
     "\n",
     "# n_fold should be equal to the number of fold which has been used to derive the strategies\n",
     "# if there are no folds, just set it to 0\n",
-    "n_fold = 1\n",
+    "n_fold = 5\n",
     "\n",
     "# start_fold should be set to the number of fold starting from which the folds of data are not used during strategy generation\n",
     "# end_fold is the last fold not used for strategy generation\n",
@@ -8726,34 +8727,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]c:\\Users\\vchar\\OneDrive\\Desktop\\ML Projects\\Upwork\\AlgoT_ML_Dev\\GrammarEvolution\\PonyGE2\\src\\fitness\\performance\\testing_func.py:283: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '[  4.93   6.5    5.05   5.24   5.04   4.88   4.93   4.99   5.     5.28\n",
-      "   5.09   5.03   5.08   5.09   5.09   5.09   5.1    5.11   5.09   5.11\n",
-      "   5.12   5.13   5.22   5.22   5.9    5.95   6.56   6.64   6.63   6.65\n",
-      "   6.65   6.69   6.8    7.92   8.89   9.    11.    11.36  11.8   11.15\n",
-      "  11.09  12.2   12.35  12.26  12.36  10.92  10.96  11.04  11.66  11.81\n",
-      "  12.11  11.99  12.41  12.47  12.77  13.41  13.52  13.4   13.41  13.29\n",
-      "  14.09  14.23  18.54  20.75  26.26  27.6   31.5   34.75  46.8   47.67\n",
-      "  74.01  95.9  124.95 132.5  144.32 123.18 118.94 119.23  94.2   87.51\n",
-      "  93.22  98.25  95.37  99.95 112.18 124.03 123.6  127.54 125.5  124.07\n",
-      " 125.17 148.71 197.   206.46 356.44 700.01 870.   962.   749.9  901.5\n",
-      " 824.5  687.3  645.83 510.   462.11 597.75 670.46 625.69 628.   631.45\n",
-      " 383.99 360.   376.23 382.25 381.51 261.   238.02 237.88 247.48 252.68\n",
-      " 257.44 278.18 234.93 244.8  242.98 239.8  231.64 245.99 266.17 288.93\n",
-      " 280.62 286.19 295.11 285.41 241.85 235.2  237.06 239.43 239.37 248.1\n",
-      " 250.6  271.09 294.55 339.47 351.86 378.55 462.5  464.94 458.06 448.32\n",
-      " 387.5  432.5  416.52 426.88 418.46 421.5  424.9  428.5  431.6  451.48\n",
-      " 463.36 457.72 452.2  551.22 583.92 675.12 674.98 668.01 591.41 608.1\n",
-      " 610.82 611.71 615.8  639.99 717.09 726.6  737.72 737.98 764.19 778.97\n",
-      " 789.02 798.83 928.9 ]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  df.loc[df.index.isin(signal_idxs), 'signal_prices'] = df.loc[df.index.isin(signal_idxs), 'btc_open'].values\n",
-      "1197it [10:28,  1.91it/s]\n"
+      "7181it [51:08,  2.34it/s]\n"
      ]
     }
    ],
@@ -8778,7 +8759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8797,7 +8778,7 @@
     "from scipy.cluster.hierarchy import fcluster\n",
     "from scipy.spatial.distance import squareform\n",
     "\n",
-    "def generate_fold_data(data_path, fold_size, time_freq, fold):\n",
+    "def generate_fold_data_valid(data_path, fold_size, time_freq, fold):\n",
     "\n",
     "    df = pd.read_csv(data_path)\n",
     "    df['datetime'] = pd.to_datetime(df['datetime'])\n",
@@ -9275,7 +9256,7 @@
     "\n",
     "    equity_curve_dict = defaultdict(list)\n",
     "\n",
-    "    df = generate_fold_data(\n",
+    "    df = generate_fold_data_valid(\n",
     "        data_path=data_path, \n",
     "        fold_size=fold_size,\n",
     "        time_freq=time_freq,\n",
@@ -10031,7 +10012,7 @@
     "\n",
     "    logger.info(f\"Starting portfolio ROI calculation for validation sample...\")\n",
     "\n",
-    "    df_prices = generate_fold_data(\n",
+    "    df_prices = generate_fold_data_valid(\n",
     "        data_path=data_path, fold_size=fold_size, time_freq=time_freq, fold=n_fold\n",
     "    )\n",
     "\n",
@@ -10240,7 +10221,7 @@
     "\n",
     "    logger.info(f\"Starting portfolio ROI calculation for validation sample...\")\n",
     "\n",
-    "    df_prices = generate_fold_data(\n",
+    "    df_prices = generate_fold_data_valid(\n",
     "        data_path=data_path, fold=n_fold, fold_size=fold_size, time_freq=time_freq\n",
     "    )\n",
     "\n",
@@ -10265,25 +10246,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:05,  3.66it/s]\n",
-      "3it [00:00,  4.45it/s]\n",
-      "3it [00:00,  5.06it/s]\n",
-      "3it [00:00,  6.12it/s]\n",
-      "3it [00:00,  5.10it/s]\n",
-      "3it [00:00,  8.14it/s]\n",
-      "3it [00:00,  5.19it/s]\n",
-      "3it [00:00,  7.16it/s]\n",
-      "3it [00:00,  5.29it/s]\n",
-      "3it [00:00,  7.75it/s]\n",
-      "3it [00:00,  5.20it/s]\n",
-      "3it [00:00,  4.72it/s]\n"
+      "425it [01:12,  5.84it/s]\n",
+      "425it [01:06,  6.42it/s]\n",
+      "425it [01:05,  6.49it/s]\n",
+      "425it [00:40, 10.46it/s]\n",
+      "425it [01:05,  6.52it/s]\n",
+      "425it [00:40, 10.51it/s]\n",
+      "425it [01:05,  6.51it/s]\n",
+      "425it [00:41, 10.34it/s]\n",
+      "425it [01:05,  6.50it/s]\n",
+      "425it [00:40, 10.53it/s]\n",
+      "425it [01:06,  6.40it/s]\n",
+      "425it [01:04,  6.59it/s]\n"
      ]
     }
    ],
@@ -10294,9 +10275,11 @@
     "    lstr_path=lstr_path, lstr_file_name=lstr_file_name, is_subset=False, start_subset=256, end_subset=260,\n",
     "    entry_testing_threshold=60, exit_testing_threshold=60, core_testing_threshold=70,\n",
     "    prob_threshold=prob_threshold, is_counter_trend_exit=False, \n",
-    "    is_random_exit=False, entry_exit_on=False, \n",
+    "    is_random_exit=False, entry_exit_on=True, \n",
     "    # create_txt_code=portfolio_testing.create_txt_code1_vbt\n",
     ")\n",
+    "\n",
+    "lstr_path = 'selected_strategies'\n",
     "\n",
     "# creating portfolio weights using prob\n",
     "creating_port_weights(lstr_path, logger, port_path=port_path, \n",
@@ -10414,26 +10397,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3it [00:00,  5.80it/s]\n",
-      "3it [00:00,  5.59it/s]\n",
-      "3it [00:00,  6.05it/s]\n",
-      "3it [00:00,  5.60it/s]\n",
-      "3it [00:00,  5.90it/s]\n",
-      "3it [00:00,  5.69it/s]\n",
-      "3it [00:00,  5.89it/s]\n"
+      "85it [00:12,  6.54it/s]\n",
+      "85it [00:13,  6.48it/s]\n",
+      "85it [00:08, 10.36it/s]\n",
+      "85it [00:15,  5.41it/s]\n",
+      "85it [00:10,  7.95it/s]\n",
+      "85it [00:15,  5.33it/s]\n",
+      "85it [00:10,  7.90it/s]\n",
+      "85it [00:15,  5.35it/s]\n",
+      "85it [00:10,  8.03it/s]\n",
+      "85it [00:16,  5.28it/s]\n",
+      "85it [00:15,  5.39it/s]\n"
      ]
     }
    ],
    "source": [
-    "port_perf_path_train = 'portfolio_out_sample_performance' # folder which will contain csv files with the performance (ROI (%), PNL) of the portfolio for different out of fold/sample data\n",
-    "str_perf_path_train = 'str_out_sample_performance' # folder which will contain csv files with the performance (ROI (%)) of the survived strategies for different out of fold/sample data\n",
+    "lstr_path = 'live_strategies'\n",
+    "\n",
+    "# creating portfolio weights using prob\n",
+    "creating_port_weights(lstr_path, logger, port_path=port_path, \n",
+    "    port_file_name=file_name, is_prob=False, prob_threshold=prob_threshold\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
+    "calculate_port_out_sample_perf(\n",
+    "    data_path, port_file_path, logger,\n",
+    "    n_fold=n_fold, fold_size=fold_size, time_freq=time_freq,\n",
+    "    initial_amount=initial_amount,\n",
+    "    port_perf_path=port_perf_path,\n",
+    "    port_perf_file_name=file_name,\n",
+    "    # create_txt_code_port=portfolio_testing.create_txt_code_port1_vbt\n",
+    ")\n",
+    "\n",
+    "# creating portfolio weights using prob and setting threshold for prob\n",
+    "creating_port_weights(lstr_path, logger, port_path=port_path, \n",
+    "    port_file_name=file_name, is_prob=True, prob_threshold=prob_threshold\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
+    "calculate_port_out_sample_perf(\n",
+    "    data_path, port_file_path, logger,\n",
+    "    n_fold=n_fold, fold_size=fold_size, time_freq=time_freq,\n",
+    "    initial_amount=initial_amount,\n",
+    "    port_perf_path=port_perf_path,\n",
+    "    port_perf_file_name=f'{file_name}_prob',\n",
+    "    # create_txt_code_port=portfolio_testing.create_txt_code_port1_vbt\n",
+    ")\n",
+    "\n",
+    "# creating portfolio weights by maximizing Sortino ratio\n",
+    "creating_port_weights_mvp(\n",
+    "    lstr_path, data_path, port_path=port_path, port_file_name=file_name.replace('_baseline', ''),\n",
+    "    is_min_variance_port=False, is_sharpe_port=False, is_sortino_port=True, prob_threshold=prob_threshold,\n",
+    "    n_fold=n_fold, fold_size=fold_size, time_freq=time_freq, freq_minutes=time_freq,\n",
+    "    # create_txt_code=portfolio_testing.create_txt_code_pnl1_vbt\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
+    "calculate_port_out_sample_perf(\n",
+    "    data_path, port_file_path=f\"{port_path}/{file_name.replace('_baseline', '')}_sortino.csv\", \n",
+    "    logger=logger, n_fold=n_fold, fold_size=fold_size, time_freq=time_freq, \n",
+    "    initial_amount=initial_amount, \n",
+    "    port_perf_path=port_perf_path,\n",
+    "    port_perf_file_name='sortino',\n",
+    "    # create_txt_code_port=portfolio_testing.create_txt_code_port1_vbt\n",
+    ")\n",
+    "\n",
+    "# creating portfolio weights by maximizing Sharpe ratio\n",
+    "creating_port_weights_mvp(\n",
+    "    lstr_path, data_path, port_path=port_path, port_file_name=file_name.replace('_baseline', ''),\n",
+    "    is_min_variance_port=False, is_sharpe_port=True, is_sortino_port=False, prob_threshold=prob_threshold,\n",
+    "    n_fold=n_fold, fold_size=fold_size, time_freq=time_freq, freq_minutes=time_freq,\n",
+    "    # create_txt_code=portfolio_testing.create_txt_code_pnl1_vbt\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
+    "calculate_port_out_sample_perf(\n",
+    "    data_path, port_file_path=f\"{port_path}/{file_name.replace('_baseline', '')}_sharpe.csv\", \n",
+    "    logger=logger, n_fold=n_fold, fold_size=fold_size, time_freq=time_freq,\n",
+    "    initial_amount=initial_amount,\n",
+    "    port_perf_path=port_perf_path,\n",
+    "    port_perf_file_name='sharpe',\n",
+    "    # create_txt_code_port=portfolio_testing.create_txt_code_port1_vbt\n",
+    ")\n",
+    "\n",
+    "# creating portfolio weights by minimizing variance/risk\n",
+    "creating_port_weights_mvp(\n",
+    "    lstr_path, data_path, port_path=port_path, port_file_name=file_name.replace('_baseline', ''),\n",
+    "    is_min_variance_port=True, is_sharpe_port=False, is_sortino_port=False, prob_threshold=prob_threshold,\n",
+    "    n_fold=n_fold, fold_size=fold_size, time_freq=time_freq, freq_minutes=time_freq,\n",
+    "    # create_txt_code=portfolio_testing.create_txt_code_pnl1_vbt\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
+    "calculate_port_out_sample_perf(\n",
+    "    data_path, port_file_path=f\"{port_path}/{file_name.replace('_baseline', '')}_mvp.csv\", \n",
+    "    logger=logger, n_fold=n_fold, fold_size=fold_size, time_freq=time_freq, \n",
+    "    initial_amount=initial_amount,\n",
+    "    port_perf_path=port_perf_path,\n",
+    "    port_perf_file_name='mvp',\n",
+    "    # create_txt_code_port=portfolio_testing.create_txt_code_port1_vbt\n",
+    ")\n",
+    "\n",
+    "# creating portfolio weights using hierarchical risk parity\n",
+    "creating_port_weights_hrp(\n",
+    "    lstr_path, data_path, n_fold=n_fold, fold_size=fold_size, time_freq=time_freq, \n",
+    "    port_path=port_path, \n",
+    "    port_file_name=file_name.replace('_baseline', '_hrp'),\n",
+    "    is_prob=True, prob_threshold=prob_threshold,\n",
+    "    # create_txt_code=portfolio_testing.create_txt_code_pnl1_vbt\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
+    "calculate_port_out_sample_perf(\n",
+    "    data_path, port_file_path=f\"{port_path}/{file_name.replace('_baseline', '')}_hrp.csv\", \n",
+    "    logger=logger, n_fold=n_fold, fold_size=fold_size, time_freq=time_freq,\n",
+    "    initial_amount=initial_amount,\n",
+    "    port_perf_path=port_perf_path,\n",
+    "    port_perf_file_name='hrp',\n",
+    "    # create_txt_code_port=portfolio_testing.create_txt_code_port1_vbt\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) perfomance of all survived strategies\n",
+    "calculate_str_out_sample_perf(\n",
+    "    data_path, port_file_path, logger,\n",
+    "    n_fold=n_fold, fold_size=fold_size, time_freq=time_freq,\n",
+    "    initial_amount=initial_amount, \n",
+    "    str_perf_path=str_perf_path,\n",
+    "    str_perf_file_name='str_roi',\n",
+    "    # create_txt_code_port=portfolio_testing.create_txt_code1_vbt\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "85it [00:17,  4.74it/s]\n",
+      "85it [00:17,  4.85it/s]\n",
+      "85it [00:17,  4.80it/s]\n",
+      "85it [00:17,  4.72it/s]\n",
+      "85it [00:18,  4.57it/s]\n",
+      "85it [00:19,  4.47it/s]\n",
+      "85it [00:19,  4.36it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "port_perf_path_train = 'portfolio_in_sample_performance' # folder which will contain csv files with the performance (ROI (%), PNL) of the portfolio for different out of fold/sample data\n",
+    "str_perf_path_train = 'str_in_sample_performance' # folder which will contain csv files with the performance (ROI (%)) of the survived strategies for different out of fold/sample data\n",
     "\n",
     "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
     "calculate_port_in_sample_perf(\n",
