--- a/test.ipynb
+++ b/test.ipynb
@@ -7339,7 +7339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7578,6 +7578,197 @@
     "\n",
     "    temp_df_valid.to_csv(f\"{folder_name}/data_fold{n_folds+i+1}.csv\", index=False)\n",
     "    print(temp_df_valid.shape)\n",
+    "\n",
+    "    # get_weekly_folds(data=temp_df_valid, time_freq=time_freq, n_fold=i+1, data_dir=data_dir)\n",
+    "\n",
+    "    # get_monthly_folds(data=temp_df_valid, time_freq=time_freq, n_fold=i+1, data_dir=data_dir)\n",
+    "\n",
+    "# temp_df_valid = df_freq[df_freq['datetime'].dt.year>=2024]\n",
+    "# temp_df_valid.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "# temp_df_valid.to_csv(f\"{folder_name}/data_fold{n_folds+i+2}.csv\", index=False)\n",
+    "# print(temp_df_valid.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 39%|███▉      | 18/46 [00:00<00:00, 167.12it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 5 6 7\n",
+      "(888, 6)\n",
+      "2 6 7 8\n",
+      "(840, 6)\n",
+      "3 7 8 9\n",
+      "(840, 6)\n",
+      "4 8 9 10\n",
+      "(840, 6)\n",
+      "5 9 10 11\n",
+      "(840, 6)\n",
+      "6 10 11 12\n",
+      "(840, 6)\n",
+      "7 11 12 13\n",
+      "(840, 6)\n",
+      "8 12 13 14\n",
+      "(840, 6)\n",
+      "9 13 14 15\n",
+      "(840, 6)\n",
+      "10 14 15 16\n",
+      "(840, 6)\n",
+      "11 15 16 17\n",
+      "(840, 6)\n",
+      "12 16 17 18\n",
+      "(840, 6)\n",
+      "13 17 18 19\n",
+      "(840, 6)\n",
+      "14 18 19 20\n",
+      "(840, 6)\n",
+      "15 19 20 21\n",
+      "(840, 6)\n",
+      "16 20 21 22\n",
+      "(840, 6)\n",
+      "17 21 22 23\n",
+      "(840, 6)\n",
+      "18 22 23 24\n",
+      "(840, 6)\n",
+      "19 23 24 25\n",
+      "(840, 6)\n",
+      "20 24 25 26\n",
+      "(840, 6)\n",
+      "21 25 26 27\n",
+      "(840, 6)\n",
+      "22 26 27 28\n",
+      "(840, 6)\n",
+      "23 27 28 29\n",
+      "(840, 6)\n",
+      "24 28 29 30\n",
+      "(840, 6)\n",
+      "25 29 30 31\n",
+      "(840, 6)\n",
+      "26 30 31 32\n",
+      "(840, 6)\n",
+      "27 31 32 33\n",
+      "(840, 6)\n",
+      "28 32 33 34\n",
+      "(840, 6)\n",
+      "29 33 34 35\n",
+      "(840, 6)\n",
+      "30 34 35 36\n",
+      "(840, 6)\n",
+      "31 35 36 37\n",
+      "(840, 6)\n",
+      "32 36 37 38\n",
+      "(840, 6)\n",
+      "33 37 38 39\n",
+      "(840, 6)\n",
+      "34 38 39 40\n",
+      "(840, 6)\n",
+      "35 39 40 41\n",
+      "(840, 6)\n",
+      "36 40 41 42\n",
+      "(840, 6)\n",
+      "37 41 42 43\n",
+      "(840, 6)\n",
+      "38 42 43 44\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 46/46 [00:00<00:00, 188.15it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(840, 6)\n",
+      "39 43 44 45\n",
+      "(840, 6)\n",
+      "40 44 45 46\n",
+      "(840, 6)\n",
+      "41 45 46 47\n",
+      "(840, 6)\n",
+      "42 46 47 48\n",
+      "(840, 6)\n",
+      "43 47 48 49\n",
+      "(840, 6)\n",
+      "44 48 49 50\n",
+      "(840, 6)\n",
+      "45 49 50 51\n",
+      "(840, 6)\n",
+      "46 50 51 52\n",
+      "(840, 6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "import os\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "data_dir = Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2')\n",
+    "\n",
+    "time_freq = 60\n",
+    "fold_size = 5 # weeks\n",
+    "n_folds = 52 - fold_size - 1\n",
+    "year = 2024\n",
+    "\n",
+    "df = pd.read_csv(Path(r\"C:/\\Users/\\vchar/\\Downloads/\\btcusd_1-min_data.csv\"))\n",
+    "df['datetime'] = pd.to_datetime(df['datetime'])\n",
+    "df.sort_values('datetime', ascending=True, inplace=True)\n",
+    "df = df[df['datetime'].dt.year==year]\n",
+    "df.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "df_freq = change_frequency(data=df, freq=f'{time_freq}min', instrument_name='btc')\n",
+    "\n",
+    "weeks_list = list(df_freq['datetime'].dt.isocalendar().week.unique())\n",
+    "weeks_list = sorted(weeks_list)\n",
+    "\n",
+    "folder_name = f'btc_{n_folds}folds_{time_freq}min_week'\n",
+    "\n",
+    "if not os.path.exists(os.path.join(data_dir, folder_name)):\n",
+    "    os.mkdir(os.path.join(data_dir, folder_name))\n",
+    "\n",
+    "for i in tqdm(range(n_folds)):\n",
+    "\n",
+    "    fold_start_week = weeks_list[i]\n",
+    "    fold_end_week = weeks_list[i] + fold_size - 1\n",
+    "    valid_fold_week = weeks_list[i] + fold_size\n",
+    "    test_fold_week = weeks_list[i] + fold_size + 1\n",
+    "    print(fold_start_week, fold_end_week, valid_fold_week, test_fold_week)\n",
+    "\n",
+    "    temp_df = df_freq[df_freq['datetime'].dt.isocalendar().week.between(fold_start_week, fold_end_week)]\n",
+    "    temp_df.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "    temp_df.to_csv(f\"{folder_name}/data_fold{i+1}.csv\", index=False)\n",
+    "    print(temp_df.shape)\n",
+    "\n",
+    "    # temp_df_valid = df_freq[df_freq['datetime'].dt.isocalendar().week==valid_fold_week]\n",
+    "    # temp_df_valid.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "    # temp_df_valid.to_csv(f\"{folder_name}/data_fold{n_folds+i+1}.csv\", index=False)\n",
+    "    # print(temp_df_valid.shape)\n",
     "\n",
     "    # get_weekly_folds(data=temp_df_valid, time_freq=time_freq, n_fold=i+1, data_dir=data_dir)\n",
     "\n",
