--- a/test.ipynb
+++ b/test.ipynb
@@ -7359,7 +7359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7386,7 +7386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7410,131 +7410,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/7 [00:00<?, ?it/s]"
+      " 11%|█         | 1/9 [00:00<00:01,  4.70it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2012 2016 2017\n",
-      "(43824, 6)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 14%|█▍        | 1/7 [00:00<00:01,  3.93it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2012 2014 2015\n",
+      "(26280, 6)\n",
       "(8760, 6)\n",
-      "2013 2017 2018\n"
+      "2013 2015 2016\n",
+      "(26280, 6)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:00<00:01,  3.85it/s]"
+      " 22%|██▏       | 2/9 [00:00<00:01,  4.64it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(43824, 6)\n",
-      "(8760, 6)\n",
-      "2014 2018 2019\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 43%|████▎     | 3/7 [00:00<00:01,  3.89it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(43824, 6)\n",
-      "(8760, 6)\n",
-      "2015 2019 2020\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 57%|█████▋    | 4/7 [00:01<00:00,  3.83it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(43824, 6)\n",
       "(8784, 6)\n",
-      "2016 2020 2021\n"
+      "2014 2016 2017\n",
+      "(26304, 6)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 5/7 [00:01<00:00,  3.83it/s]"
+      " 33%|███▎      | 3/9 [00:00<00:01,  4.55it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(43848, 6)\n",
       "(8760, 6)\n",
-      "2017 2021 2022\n"
+      "2015 2017 2018\n",
+      "(26304, 6)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 6/7 [00:01<00:00,  4.01it/s]"
+      " 44%|████▍     | 4/9 [00:00<00:01,  4.44it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(43824, 6)\n",
       "(8760, 6)\n",
-      "2018 2022 2023\n"
+      "2016 2018 2019\n",
+      "(26304, 6)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:01<00:00,  4.03it/s]"
+      " 56%|█████▌    | 5/9 [00:01<00:00,  4.42it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(43824, 6)\n",
+      "(8760, 6)\n",
+      "2017 2019 2020\n",
+      "(26280, 6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 6/9 [00:01<00:00,  4.20it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8784, 6)\n",
+      "2018 2020 2021\n",
+      "(26304, 6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 78%|███████▊  | 7/9 [00:01<00:00,  4.08it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8760, 6)\n",
+      "2019 2021 2022\n",
+      "(26304, 6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 89%|████████▉ | 8/9 [00:01<00:00,  4.03it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8760, 6)\n",
+      "2020 2022 2023\n",
+      "(26304, 6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9/9 [00:02<00:00,  4.21it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "(8760, 6)\n"
      ]
     },
@@ -7547,11 +7566,23 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "import os\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "data_path = Path(r\"C:/\\Users/\\vchar/\\Downloads/\\btcusd_1-min_data.csv\")\n",
+    "\n",
+    "df = pd.read_csv(data_path)\n",
+    "df['datetime'] = pd.to_datetime(df['datetime'])\n",
+    "\n",
+    "years_list = list(df['datetime'].dt.year.unique())\n",
+    "\n",
     "data_dir = Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2')\n",
     "\n",
     "time_freq = 60\n",
-    "fold_size = 5 # years\n",
-    "n_folds = 7\n",
+    "fold_size = 3 # years\n",
+    "n_folds = 9\n",
     "\n",
     "df_freq = change_frequency(data=df, freq=f'{time_freq}min', instrument_name='btc')\n",
     "\n",
