--- a/test.ipynb
+++ b/test.ipynb
@@ -7818,6 +7818,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4932, 6)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "strategy_file_path = Path(r\"C:/\\Users/\\vchar/\\Downloads/\\ge_results.csv\")\n",
+    "\n",
+    "try:\n",
+    "    df_str = pd.read_csv(strategy_file_path)\n",
+    "except:\n",
+    "    df_str = pd.read_csv(strategy_file_path, sep=';')\n",
+    "    \n",
+    "df_str = df_str[df_str['fitness'] < 0]\n",
+    "df_str = df_str[~df_str.duplicated()]\n",
+    "\n",
+    "# df_str_get1000 = df_str[df_str['fitness'] <= -1000]#.reset_index(drop=True).iloc[:1000]\n",
+    "# df_str_lt1000 = df_str[df_str['fitness'] > -1000].reset_index(drop=True).iloc[:1000]\n",
+    "# # df_str_small_fitness = df_str[(df_str['fitness'] > -100) & (df_str['fitness'] < -50)]\n",
+    "\n",
+    "# df_str = pd.concat([df_str_get1000, df_str_lt1000], axis=0)\n",
+    "# # df_str = pd.concat([df_str, df_str_small_fitness], axis=0)\n",
+    "\n",
+    "# df_str = df_str[df_str['fitness'] < -1].reset_index(drop=True)#.iloc[:10000]\n",
+    "# df_str = df_str[(df_str['fitness'] < -1) & (df_str['fitness'] >= -50)].reset_index(drop=True)#.iloc[:10000]\n",
+    "# df_str = df_str[(df_str['fitness'] < -50) & (df_str['fitness'] >= -100)].reset_index(drop=True)#.iloc[:10000]\n",
+    "# df_str = df_str[(df_str['fitness'] < -100) & (df_str['fitness'] >= -1000)].reset_index(drop=True)#.iloc[:10000]\n",
+    "df_str = df_str[(df_str['fitness'] < -100)].reset_index(drop=True)#.iloc[:10000]\n",
+    "\n",
+    "df_str.sort_values('fitness', ascending=True, inplace=True)\n",
+    "df_str.reset_index(drop=True, inplace=True)\n",
+    "# df_str = df_str.iloc[:3000]\n",
+    "df_str['strategy'] = [f'strategy{i+1}' for i in range(df_str.shape[0])]\n",
+    "df_str.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
