--- a/test.ipynb
+++ b/test.ipynb
@@ -7819,16 +7819,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4932, 6)"
+       "(48828, 6)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7855,10 +7855,14 @@
     "# # df_str = pd.concat([df_str, df_str_small_fitness], axis=0)\n",
     "\n",
     "# df_str = df_str[df_str['fitness'] < -1].reset_index(drop=True)#.iloc[:10000]\n",
-    "# df_str = df_str[(df_str['fitness'] < -1) & (df_str['fitness'] >= -50)].reset_index(drop=True)#.iloc[:10000]\n",
+    "# df_str = df_str[(df_str['fitness'] < -1) & (df_str['fitness'] >= -5)].reset_index(drop=True)#.iloc[:10000]\n",
+    "# df_str = df_str[(df_str['fitness'] < -5) & (df_str['fitness'] >= -10)].reset_index(drop=True)#.iloc[:10000]\n",
+    "# df_str = df_str[(df_str['fitness'] < -10) & (df_str['fitness'] >= -20)].reset_index(drop=True)#.iloc[:10000]\n",
+    "df_str = df_str[(df_str['fitness'] < -20) & (df_str['fitness'] >= -30)].reset_index(drop=True)#.iloc[:10000]\n",
+    "# df_str = df_str[(df_str['fitness'] < -30) & (df_str['fitness'] >= -40)].reset_index(drop=True)#.iloc[:10000]\n",
+    "# df_str = df_str[(df_str['fitness'] < -40) & (df_str['fitness'] >= -50)].reset_index(drop=True)#.iloc[:10000]\n",
     "# df_str = df_str[(df_str['fitness'] < -50) & (df_str['fitness'] >= -100)].reset_index(drop=True)#.iloc[:10000]\n",
-    "# df_str = df_str[(df_str['fitness'] < -100) & (df_str['fitness'] >= -1000)].reset_index(drop=True)#.iloc[:10000]\n",
-    "df_str = df_str[(df_str['fitness'] < -100)].reset_index(drop=True)#.iloc[:10000]\n",
+    "# df_str = df_str[(df_str['fitness'] < -100)].reset_index(drop=True)#.iloc[:10000]\n",
     "\n",
     "df_str.sort_values('fitness', ascending=True, inplace=True)\n",
     "df_str.reset_index(drop=True, inplace=True)\n",
